--- a/Orginal Prototype/README
+++ b/Orginal Prototype/README
@@ -1,4 +1,4 @@
-This is the original prototype that I made...saving this for historical purposes.
+This is the original prototype that I made...saving this for historical purposes. <br />
 
 
 <img src="https://github.com/brianreboot/brian-pico-breakout/blob/main/Orginal%20Prototype/PXL_20221005_0723041682.jpg" height=30% width=30% >
